--- a/part-2/index.html
+++ b/part-2/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -8,15 +9,13 @@
 
 <div id="root"> <!-- component will go in this div --> </div>
 
-<script src=
-  "https://unpkg.com/react/umd/react.development.js"></script>
-<script src=
-  "https://unpkg.com/react-dom/umd/react-dom.development.js">
-</script>
-
+<script src="https://unpkg.com/react/umd/react.development.js"></script>
+<script src="https://unpkg.com/react-dom/umd/react-dom.development.js"></script>
 <script src="https://unpkg.com/babel-standalone"></script>
 
 <!-- add script tags for your components here -->
+<script src="Tweet.js" type="text/jsx"></script>
+<script src="App.js" type="text/jsx"></script>
 <script src="index.js" type="text/jsx"></script>
 
 </body>
